Bug 478826 - kaccounts-integration error: calling a private constructor of class 'QString'
Summary: kaccounts-integration error: calling a private constructor of class 'QString'
Status: RESOLVED FIXED
Alias: None
Product: KAccounts
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-21 10:22 UTC by Mike Lothian
Modified: 2023-12-21 13:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Build log (130.54 KB, text/x-log)
2023-12-21 10:22 UTC, Mike Lothian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Lothian 2023-12-21 10:22:10 UTC
Created attachment 164338 [details]
Build log

Issues building with clang 17.0.6

FAILED: src/plugins/kio-webdav/CMakeFiles/kaccounts_kio_webdav_plugin.dir/kioservices.cpp.o 
/usr/lib/llvm/17/bin/clang++ -DKCOREADDONS_LIB -DKF_DEPRECATED_WARNINGS_SINCE=0x60000 -DKF_DISABLE_DEPRECATED_BEFORE_AND_AT=0x56500 -DKPLUGINFACTORY_PLUGIN_CLASS_INTERNAL_NAME=kaccounts_kio_webdav_plugin_factory -DQT_CORE_LIB -DQT_DBUS_LIB -DQT_DEPRECATED_WARNINGS_SINCE=0x60000 -DQT_DISABLE_DEPRECATED_BEFORE=0x50d00 -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_FROM_BYTEARRAY -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_FOREACH -DQT_NO_KEYWORDS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_URL_CAST_FROM_STRING -DQT_STRICT_ITERATORS -DQT_USE_QSTRINGBUILDER -DQT_WIDGETS_LIB -DQT_XML_LIB -DTRANSLATION_DOMAIN=\"kaccounts-integration\" -D_GNU_SOURCE -D_LARGEFILE64_SOURCE -Dkaccounts_kio_webdav_plugin_EXPORTS -I/var/tmp/portage/kde-apps/kaccounts-integration-9999/work/kaccounts-integration-9999_build-default/src/plugins/kio-webdav -I/var/tmp/portage/kde-apps/kaccounts-integration-9999/work/kaccounts-integration-9999/src/plugins/kio-webdav -I/var/tmp/portage/kde-apps/kaccounts-integration-9999/work/kaccounts-integration-9999_build-default/src/plugins/kio-webdav/kaccounts_kio_webdav_plugin_autogen/include -I/var/tmp/portage/kde-apps/kaccounts-integration-9999/work/kaccounts-integration-9999_build-default/src/lib -I/var/tmp/portage/kde-apps/kaccounts-integration-9999/work/kaccounts-integration-9999/src/lib -isystem /usr/include/qt6/QtCore -isystem /usr/include/qt6 -isystem /usr/lib64/qt6/mkspecs/linux-clang -isystem /usr/include/qt6/QtWidgets -isystem /usr/include/qt6/QtGui -isystem /usr/include/KF6/KCoreAddons -isystem /usr/include/KF6/KConfig -isystem /usr/include/KF6/KConfigCore -isystem /usr/include/KF6/KWallet -isystem /usr/include/KF6/KIOCore -isystem /usr/include/KF6/KIO -isystem /usr/include/qt6/QtNetwork -isystem /usr/include/qt6/QtDBus -isystem /usr/include/KF6/KI18n -isystem /usr/include/KF6/KDBusAddons -isystem /usr/include/accounts-qt6 -isystem /usr/include/qt6/QtXml -isystem /usr/include/qcoro6 -isystem /usr/include/qcoro6/qcoro -isystem /usr/include/qcoro6/QCoro  -DQT_NO_DEBUG -DQT_NO_DEBUG -O3 -pipe -flto=thin -march=native -fno-exceptions -Wno-gnu-zero-variadic-macro-arguments -Wall -Wextra -Wcast-align -Wchar-subscripts -Wformat-security -Wno-long-long -Wpointer-arith -Wundef -Wnon-virtual-dtor -Woverloaded-virtual -Werror=return-type -Werror=init-self -Werror=undef -Wvla -Wdate-time -pedantic -Wzero-as-null-pointer-constant -fdiagnostics-color=always -std=gnu++20 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -fPIC -MD -MT src/plugins/kio-webdav/CMakeFiles/kaccounts_kio_webdav_plugin.dir/kioservices.cpp.o -MF src/plugins/kio-webdav/CMakeFiles/kaccounts_kio_webdav_plugin.dir/kioservices.cpp.o.d -o src/plugins/kio-webdav/CMakeFiles/kaccounts_kio_webdav_plugin.dir/kioservices.cpp.o -c /var/tmp/portage/kde-apps/kaccounts-integration-9999/work/kaccounts-integration-9999/src/plugins/kio-webdav/kioservices.cpp
/var/tmp/portage/kde-apps/kaccounts-integration-9999/work/kaccounts-integration-9999/src/plugins/kio-webdav/kioservices.cpp:187:45: error: calling a private constructor of class 'QString'
  187 |     KConfigGroup desktopFile(&_desktopFile, "Desktop Entry");
      |                                             ^
/usr/include/qt6/QtCore/qstring.h:913:5: note: declared private here
  913 |     QString(const char *ch);
      |     ^
/var/tmp/portage/kde-apps/kaccounts-integration-9999/work/kaccounts-integration-9999/src/plugins/kio-webdav/kioservices.cpp:262:45: error: calling a private constructor of class 'QString'
  262 |     KConfigGroup desktopFile(&_desktopFile, "Desktop Entry");
      |                                             ^
/usr/include/qt6/QtCore/qstring.h:913:5: note: declared private here
  913 |     QString(const char *ch);
      |     ^
2 errors generated.
Comment 1 Nicolas Fella 2023-12-21 13:03:43 UTC
Git commit 21eb252aca663f5ca72b9775812843daa705585d by Nicolas Fella.
Committed on 21/12/2023 at 14:03.
Pushed by nicolasfella into branch 'master'.

Adapt to KConfig API change

M  +2    -2    src/plugins/kio-webdav/kioservices.cpp

https://invent.kde.org/network/kaccounts-integration/-/commit/21eb252aca663f5ca72b9775812843daa705585d
Comment 2 Mike Lothian 2023-12-21 13:19:29 UTC
Thanks, I've spotted that issue in a few other projects as well, I'll use your solution and try and get some PRs in