Adapt to KConfig API change

BUG: 478826